initial CADET RDM commit

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,12 @@ __pycache__
 *.h5
 /output/
 /output_cached/
+.idea
+*diskcache*
+*tmp*
+.ipynb_checkpoints
+__pycache__
+*.ipynb
+*.h5
+/output/
+/output_cached/
